fix(color): Universe Color Parser has been finally fixed at all. Other minimal changes too